...
            "state": "translated",
            "value": "Remove image"
          }
        }
      }
    },
    "Bild hinzufügen": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add image"
          }
...
            "state": "translated",
            "value": "Models that are set up"
          }
        }
      }
    },
    "Einrichten": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Set up"
          }
...
            "state": "translated",
            "value": "Have it set up"
          }
        }
      }
    },
    "Einstellungen": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "The `data` field is missing."
          }
        }
      }
    },
    "Fertig": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
...
            "state": "translated",
            "value": "Context window"
          }
        }
      }
    },
    "Kopieren": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Copy"
          }
...
            "state": "translated",
            "value": "Send again"
          }
        }
      }
    },
    "Neue Unterhaltung": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New conversation"
...
            "state": "translated",
            "value": "Enter it yourself"
          }
        }
      }
    },
    "Senden": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send"
          }
...
            "state": "translated",
            "value": "To the end"
          }
        }
      }
    },
    "Zum Ende des Gesprächs springen": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Jump to the end of the conversation"
          }
...
